--- a/src/components/form/field_password/_field_password.scss
+++ b/src/components/form/field_password/_field_password.scss
@@ -1,4 +1,4 @@
 .euiFieldPassword {
-  @include kuiFormControlStyle;
-  @include kuiFormControlWithIcon($isIconOptional: false);
+  @include euiFormControlStyle;
+  @include euiFormControlWithIcon($isIconOptional: false);
 }
