--- a/src/components/form/field_text/_field_text.scss
+++ b/src/components/form/field_text/_field_text.scss
@@ -1,4 +1,4 @@
 .euiFieldText {
-  @include kuiFormControlStyle;
-  @include kuiFormControlWithIcon($isIconOptional: true);
+  @include euiFormControlStyle;
+  @include euiFormControlWithIcon($isIconOptional: true);
 }
