--- a/src/components/header/_header_logo.scss
+++ b/src/components/header/_header_logo.scss
@@ -1,7 +1,7 @@
 @import '../link/mixins';
 
 .euiHeaderLogo {
-  @include kuiLink;
+  @include euiLink;
 
   position: relative;
   height: $euiHeaderChildSize;
