--- a/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
+++ b/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
@@ -27,7 +27,7 @@
   }
 
   &:not(.euiHeaderBreadcrumb--collapsed) {
-    @include kuiLink;
+    @include euiLink;
   }
 
   &.euiHeaderBreadcrumb-isActive {
