--- a/src/components/modal/_modal_overlay.scss
+++ b/src/components/modal/_modal_overlay.scss
@@ -10,5 +10,5 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 10vh;
-  animation: kuiAnimFadeIn $euiAnimSpeedFast ease-in;
+  animation: euiAnimFadeIn $euiAnimSpeedFast ease-in;
 }
