--- a/src/components/popover/_mixins.scss
+++ b/src/components/popover/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin kuiPopoverTitle {
+@mixin euiPopoverTitle {
   background-color: $euiColorLightestShade;
   border-bottom: $euiBorderThin;
   padding: $euiSizeM;
