--- a/src/components/side_nav/_side_nav_title.scss
+++ b/src/components/side_nav/_side_nav_title.scss
@@ -1,5 +1,5 @@
 .euiSideNavTitle {
-  @include kuiFontSize;
+  @include euiFontSize;
 
   font-weight: $euiFontWeightMedium;
   margin-bottom: $euiSizeS;
