--- a/src/global_styling/mixins/_shadow.scss
+++ b/src/global_styling/mixins/_shadow.scss
@@ -1,26 +1,26 @@
-@mixin kuiBottomShadow {
+@mixin euiBottomShadow {
   box-shadow: 0 16px 16px -8px rgba(0, 0, 0, 0.1);
 }
 
-@mixin kuiBottomShadowSmall {
+@mixin euiBottomShadowSmall {
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.1);
 }
 
-@mixin kuiBottomShadowMedium {
+@mixin euiBottomShadowMedium {
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.2);
 }
 
-@mixin kuiSlightShadow {
+@mixin euiSlightShadow {
   box-shadow:
     0 2px 2px -1px rgba(0, 0, 0, 0.15),
 }
 
-@mixin kuiSlightShadowHover {
+@mixin euiSlightShadowHover {
   box-shadow:
     0 4px 4px -2px rgba(0, 0, 0, 0.1),
 }
 
-@mixin kuiSlightShadowActive {
+@mixin euiSlightShadowActive {
   box-shadow:
     0 1px 1px 0px rgba(0, 0, 0, 0.2),
 }
