--- a/src/components/code/_code.scss
+++ b/src/components/code/_code.scss
@@ -1,5 +1,5 @@
 .euiCode {
-  @include kuiCodeFont;
+  @include euiCodeFont;
   display: inline-block;
   white-space: pre;
   background: $euiColorLightestShade;
