--- a/src/components/form/field_number/_field_number.scss
+++ b/src/components/form/field_number/_field_number.scss
@@ -1,4 +1,4 @@
 .euiFieldNumber {
-  @include kuiFormControlStyle;
-  @include kuiFormControlWithIcon($isIconOptional: true);
+  @include euiFormControlStyle;
+  @include euiFormControlWithIcon($isIconOptional: true);
 }
