--- a/src/components/form/field_search/_field_search.scss
+++ b/src/components/form/field_search/_field_search.scss
@@ -1,6 +1,6 @@
 .euiFieldSearch {
-  @include kuiFormControlStyle;
-  @include kuiFormControlWithIcon($isIconOptional: false);
+  @include euiFormControlStyle;
+  @include euiFormControlWithIcon($isIconOptional: false);
   // This is a hack, since in Safari the search boxes were ignoring
   // padding. Get Dave Snider involved. It improves rendering significantly
   // although the padding still looks a bit off.
