--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -1,5 +1,5 @@
 .euiFormControlLayout {
-  @include kuiFormControlSize;
+  @include euiFormControlSize;
 
   display: inline-block;
   position: relative;
