--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -1,5 +1,5 @@
 .euiToast {
-  @include kuiBottomShadow;
+  @include euiBottomShadow;
 
   position: relative;
   padding: $euiSize;
@@ -66,7 +66,7 @@ $toastTypes: (
  * 3. Account for close button.
  */
 .euiToastHeader {
-  @include kuiFontSizeM;
+  @include euiFontSizeM;
   padding-right: $euiSizeL; /* 3 */
 
   display: flex;
