Case-sensitive KUI->EUI

--- a/src/components/side_nav/_side_nav.scss
+++ b/src/components/side_nav/_side_nav.scss
@@ -12,7 +12,7 @@
     text-align: left;
 
     /**
-     * 1. This toggle also works with KUI link, but we need the outline
+     * 1. This toggle also works with EUI link, but we need the outline
      *    that comes with the focus state.
      */
     &:focus {
