buttonType and default of type button (#54)
* Use color instead of type, across the board.

* lint

* lint task

* no autofix

* Migrate to color, change some classes

* fix name

* fix usage

--- a/src/components/call_out/_call_out.scss
+++ b/src/components/call_out/_call_out.scss
@@ -5,7 +5,7 @@
 
 // Modifier naming and colors.
 $callOutTypes: (
-  info: $euiColorPrimary,
+  primary: $euiColorPrimary,
   success: $euiColorSecondary,
   warning: $euiColorWarning,
   danger: $euiColorDanger,
