--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -47,7 +47,7 @@
 
 // Modifier naming and colors.
 $toastTypes: (
-  info: $euiColorPrimary,
+  primary: $euiColorPrimary,
   success: $euiColorSecondary,
   warning: $euiColorWarning,
   danger: $euiColorDanger,
