use min-height instead of height (#70)

--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -1,6 +1,6 @@
 .euiCheckbox {
   position: relative;
-  height: $euiSizeL;
+  min-height: $euiSizeL;
 
   /**
    * 1. Float above the visual checkbox and match its dimension, so that when users try to click it
