EuiText adds xs size, and lets you apply color directly (#90)

--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -86,6 +86,32 @@
     }
   }
 
+  &.euiText--extraSmall {
+    @include euiFontSizeXS;
+
+    * + h1,
+    * + h2,
+    * + h3,
+    * + h4,
+    * + h5,
+    * + h6 {
+      margin-top: $euiSizeM;
+    }
+
+    p,
+    ul,
+    ol,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    img {
+      margin-bottom: $euiFontSizeS;
+    }
+  }
+
   > :last-child {
     margin-bottom: 0 !important;
   }
