Full screen sandboxes (#82)
* Remove unused GuideDemo component.
* Remove unused isCodeViewOpen prop.
* Remove unused guide_demo.scss import.
* Remove unused code. Refactor isChromeVisible concern to isSandbox.
* Rename and reorganize documentation files to follow established import/export patterns.
* Add GuideSandboxChromeToggle.
* Refactor theming to be driven by the store. Enable theming in sandboxes.
* List subsections in sidenav.
* Add guideZLevelHighest variable.
* Scroll to top when you click a main side nav link.

--- a/docs/src/components/guide_components.scss
+++ b/docs/src/components/guide_components.scss
@@ -1,3 +1,4 @@
+$guideZLevelHighest: $euiZLevel9 + 1000;
 
 @mixin whenNarrowerThan($browserWidth) {
   @media only screen and (max-width: #{$browserWidth}) {
@@ -45,6 +46,74 @@
   }
 }
 
-@import "guide_demo/guide_demo";
-@import "guide_header/guide_header";
-@import "guide_section/guide_section";
+.guideDemo__highlightLayout {
+  div {
+    background: transparentize(#0096CC, .9);
+  }
+}
+.guideDemo__highlightSpacer {
+  .euiSpacer {
+    background: transparentize(#0096CC, .9);
+  }
+}
+
+.guideDemo__highlightGrid {
+  .euiFlexItem {
+    background: transparentize(#0096CC, .9);
+    padding: 16px;
+  }
+}
+
+.guideDemo__highlightGridWrap {
+  .euiFlexItem div {
+    background: transparentize(#0096CC, .9);
+    padding: 16px;
+  }
+}
+
+.guideDemo__textLines {
+  background-image: linear-gradient($euiFocusBackgroundColor 1px, transparent 1px) !important;
+  background-size: 100% 8px !important;
+}
+
+.guideDemo__color {
+  padding: $euiSizeS;
+  color: $euiColorEmptyShade;
+  font-size: $euiFontSizeS;
+  margin-top: $euiSizeS;
+  line-height: 1.5;
+  height: 64px;
+
+  .guideDemo__colorHex {
+    font-size: $euiFontSize;
+  }
+}
+
+.guideDemo__size {
+  background: $euiTextColor;
+  display: inline-block;
+}
+
+.guideDemo__sizeText {
+  line-height: 1.5;
+}
+
+.guideDemo__sizeGrid {
+  font-size: $euiFontSizeS;
+}
+
+.guideDemo__ghostBackground {
+  background: #444;
+  padding: $euiSizeL;
+}
+
+.guideDemo__icon {
+  text-align: center;
+
+  svg {
+    margin-bottom: $euiSizeS;
+  }
+}
+
+@import "guide_sandbox/index";
+@import "guide_section/index";
