Update Popover and Table to support ContextMenus inside of Tables. (#102)
* Update Popover and Table to support ContextMenus inside of Tables.
* Document textOnly and wrapText props.
* Couple Button and Popover min-width.

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -4,7 +4,7 @@
   @include euiSlightShadow;
 
   border-radius: $euiBorderRadius;
-  min-width: $euiSize * 7;
+  min-width: $euiButtonMinWidth;
 
   .euiButton__content {
     @include euiButtonContent;
