--- a/src/global_styling/variables/_size.scss
+++ b/src/global_styling/variables/_size.scss
@@ -6,3 +6,5 @@ $euiSizeM:    $euiSize * .75;
 $euiSizeL:    $euiSize * 1.5;
 $euiSizeXL:   $euiSize * 2;
 $euiSizeXXL:  $euiSize * 2.5;
+
+$euiButtonMinWidth: $euiSize * 7;
